# aws-lambda-runtime-proxy

./: CHANGELOG.md  Cargo.toml  README.md
benchmark/: README.md  samconfig.toml  template.yaml
benchmark/nodejs/: index.mjs
examples/: hello_world.rs  modify_handler_process.rs
img/: src.drawio
src/: client.rs  lib.rs  server.rs
