[package]
name = "aws-lambda-runtime-proxy"
version = "0.1.1"
edition = "2021"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
description = "A helper lib to customize the communication between the lambda handler process and the lambda runtime api."
repository = "https://github.com/DiscreteTom/aws-lambda-runtime-proxy"
keywords = ["aws", "lambda", "runtime", "proxy"]
license-file = "LICENSE"
exclude = ["examples/*", "img/*", "rustfmt.toml", ".gitignore", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
